--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -17,6 +17,9 @@
                     <div class="card-text" style="white-space: pre-line;" th:text="${boardview.content}">내용</div>
                     <div class="d-flex justify-content-end">
                         <div class="badge bg-light text-dark p-2 text-start">
+                            <div class="mb-2">
+                                <span th:if="${boardview.author != null}" th:text="${boardview.author.name}"></span>
+                            </div>
                             <div th:text="${boardview.createdDate}"></div>
                         </div>
                     </div>
@@ -41,6 +44,9 @@
                     <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
                     <div class="d-flex justify-content-end">
                         <div class="badge bg-light text-dark p-2 text-start">
+                            <div class="mb-2">
+                                <span th:if="${answer.author != null}" th:text="${answer.author.name}"></span>
+                            </div>
                             <div th:text="${answer.createdDate}"></div>
                         </div>
                     </div>
